--- a/ST10395938_POEPart2/wwwroot/css/site.css
+++ b/ST10395938_POEPart2/wwwroot/css/site.css
@@ -29,3 +29,30 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+body {
+    background-color: #f4f6f9;
+}
+
+.table thead {
+    background-color: #0d6efd;
+    color: #fff;
+}
+
+.table-hover tbody tr:hover {
+    background-color: #f1f7ff;
+}
+
+.btn-outline-secondary:hover {
+    background-color: #dee2e6;
+}
+
+.alert-info {
+    background-color: #e9f5ff;
+    border-color: #b6e0fe;
+    color: #055160;
+}
+
+input, select, textarea {
+    border-radius: 8px !important;
+}
